--- a/index.html
+++ b/index.html
@@ -49,58 +49,58 @@
         </script>
         <div class="by-2">
             <a class="link" href="/subs/1patrick.html">
-                <img class="pp" src="/pp/1.jpg" alt="Patrick">
+                <img class="pp" src="pp/1.jpg" alt="Patrick">
             </a>
             <a class="link" href="/subs/2agnes.html">
-                <img class="pp" src="/pp/2.jpg" alt="Agnes">
+                <img class="pp" src="pp/2.jpg" alt="Agnes">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/3ace.html">
-                <img class="pp" src="/pp/3.jpg" alt="Ace">
+                <img class="pp" src="pp/3.jpg" alt="Ace">
             </a>
             <a class="link" href="/subs/4laarni.html">
-                <img class="pp" src="/pp/4.jpg" alt="Laarni">
+                <img class="pp" src="pp/4.jpg" alt="Laarni">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/5carla.html">
-                <img class="pp" src="/pp/5.jpg" alt="Carla">
+                <img class="pp" src="pp/5.jpg" alt="Carla">
             </a>
             <a class="link" href="/subs/6nino.html">
-                <img class="pp" src="/pp/6.jpg" alt="Niño">
+                <img class="pp" src="pp/6.jpg" alt="Niño">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/7carloss.html">
-                <img class="pp" src="/pp/7.jpg" alt="Carlos S.">
+                <img class="pp" src="pp/7.jpg" alt="Carlos S.">
             </a>
             <a class="link" href="/subs/8kathy.html">
-                <img class="pp" src="/pp/8.jpg" alt="Kathy">
+                <img class="pp" src="pp/8.jpg" alt="Kathy">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/9carmel.html">
-                <img class="pp" src="/pp/9.jpg" alt="Carmel">
+                <img class="pp" src="pp/9.jpg" alt="Carmel">
             </a>
             <a class="link" href="/subs/10richard.html">
-                <img class="pp" src="/pp/10.jpg" alt="Richard">
+                <img class="pp" src="pp/10.jpg" alt="Richard">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/11ryan.html">
-                <img class="pp" src="/pp/11.jpg" alt="Ryan">
+                <img class="pp" src="pp/11.jpg" alt="Ryan">
             </a>
             <a class="link" href="/subs/12caryl.html">
-                <img class="pp" src="/pp/12.jpg" alt="Caryl">
+                <img class="pp" src="pp/12.jpg" alt="Caryl">
             </a>
         </div>
         <div class="by-2">
             <a class="link" href="/subs/13shanee.html">
-                <img class="pp" src="/pp/13.jpg" alt="Shanee">
+                <img class="pp" src="pp/13.jpg" alt="Shanee">
             </a>
             <a class="link" href="/subs/14me.html">
-                <img class="pp" src="/pp/14.jpg" alt="Carlos">
+                <img class="pp" src="pp/14.jpg" alt="Carlos">
             </a>
         </div>
     </div>
