--- a/subs/1patrick.html
+++ b/subs/1patrick.html
@@ -23,7 +23,7 @@
 <body>
     <div class="navbar" id="myNavbar">
         <ul class="navlist">
-            <li class="list"><a class="left" href="index.html">Home</a></li>
+            <li class="list"><a class="left" href="/index.html">Home</a></li>
             <li class="list"><a class="left" href="#8.8">8.8</a></li>
             <li class="list"><a class="left" href="#Enjoy your day">Enjoy your day!!</a></li>
             <div id="navbar-right">
@@ -43,7 +43,7 @@
         }
     </script>
     <div class="container">
-        <img class="msg" src="msges/1.jpg" alt="Patrick's Message">
+        <img class="msg" src="/msges/1.jpg" alt="Patrick's Message">
     </div>
 </body>
 
