--- a/subs/2agnes.html
+++ b/subs/2agnes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agnes' Message</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 <body>
     <div class="navbar" id="myNavbar">
         <ul class="navlist">
-            <li class="list"><a class="left" href="/index.html">Home</a></li>
+            <li class="list"><a class="left" href="../index.html">Home</a></li>
             <li class="list"><a class="left" href="#8.8">8.8</a></li>
             <li class="list"><a class="left" href="#Enjoy your day">Enjoy your day!!</a></li>
             <div id="navbar-right">
@@ -43,7 +43,7 @@
         }
     </script>
     <div class="container">
-        <img class="msg" src="/msges/2.jpg" alt="Agnes' Message">
+        <img class="msg" src="../msges/2.jpg" alt="Agnes' Message">
     </div>
 </body>
 
